@@ -6,6 +6,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import javax.validation.Valid;
@@ -34,6 +35,7 @@ public class PlayerController {
 	private PlayerService playerService;
 	private AchievementService achievementService;
 	public static final String player_listing = "players/playerList";
+	public static final String player_listingById = "players/playerList2";
     public static final String player_editing = "players/createOrUpdatePlayer";
     public static final String achievement_listing = "achievements/AchievementsListing";
     public static final String player_profile = "players/dataPlayer";
@@ -54,7 +56,7 @@ public class PlayerController {
 		int totalPages = pagePlayer.getTotalPages();
 		List<Integer> pages=new ArrayList<>();
 		if(totalPages > 0) {
-			pages= IntStream.rangeClosed(1, totalPages).boxed().toList();
+			pages= IntStream.rangeClosed(1, totalPages).boxed().collect(Collectors.toList());
 		}
 		
         ModelAndView result = new ModelAndView(player_listing);
@@ -85,7 +87,7 @@ public class PlayerController {
 		int totalPages = pageGamesByPlayerId.getTotalPages();
 		List<Integer> pages=new ArrayList<>();
 		if(totalPages > 0) {
-			pages= IntStream.rangeClosed(1, totalPages).boxed().toList();
+			pages= IntStream.rangeClosed(1, totalPages).boxed().collect(Collectors.toList());
 		}
     	
         model.put( "player", this.playerService.showPlayerById( id ) );
@@ -113,7 +115,6 @@ public class PlayerController {
 
     @PostMapping("/edit/{id}")
     public ModelAndView editJugador(@PathVariable("id") Integer id, @Valid Player newPlayer,BindingResult br, @RequestParam Map<String, Object> params) {
-
         ModelAndView result=null;
         if(br.hasErrors()) {
             result = new ModelAndView(player_editing);
@@ -130,7 +131,7 @@ public class PlayerController {
          result = showAllPlayers(params);
          result.addObject("message", "Jugador con id "+id+" no ha sido editado correctamente");
          return result;
-    }
+        }
 
     @GetMapping("/new")
     public ModelAndView createJugador() {
